--- a/vignettes/Cross_Validation_using_survcompare.Rmd
+++ b/vignettes/Cross_Validation_using_survcompare.Rmd
@@ -12,6 +12,7 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>"
 )
+#devtools::install_github("dianashams/survcompare")
 ```
 
 ## `survcompare` background
@@ -38,14 +39,20 @@ Performance metrics' description and definitions can be found, for example, here
 
 Steyerberg, E. W., & Vergouwe, Y. (2014). Towards better clinical prediction models: seven steps for development and an ABCD for validation. *European heart journal, 35(29)*, 1925-1931.
 
+Package installation: 
+```{r setup2}
+# install.packages("devtools")
+# devtools::install_github("dianashams/survcompare")
+library(survcompare)
+
+```
+
 ## Other use cases of `survcompare`
 
 ### 1. Fitting, cross-validating, and predicting event probabilities using `survcompare` functionality for CoxPH and CoxLasso
 
 ```{r coxph_cv}
 library(survcompare)
-library(survival)
-
 #Let's take GBSG data from survival package. 
 # We need to define "time" and "event" columns, and check missing values 
 mygbsg <- gbsg
@@ -65,8 +72,8 @@ predict_time <- 6
 cox1<- survcox_train(traindf, myfactors, useCoxLasso = FALSE)
 
 # predict event probability at predict_time
-cox_p6_test<- survcox_predict(cox1, testdf, predict_time)
-cox_p6_train <- survcox_predict(cox1, traindf, predict_time)
+cox_p6_test<- survcompare::survcox_predict(cox1, testdf, predict_time)
+cox_p6_train <- survcompare::survcox_predict(cox1, traindf, predict_time)
 
 # compute performance stats 
 cox_performance_test <- 
@@ -144,7 +151,7 @@ summary(srfcv)
 
 ##### Custom tuning SRF
 
-The final bit of the tutorial shows how SRF can be custom-tuned using survsrf_train() function with a supplied list of mtry, nodesize, and nodedepth values. There are more parameters in the `randomForestSRC::rfsrc()` function, however, these are the ones that are most often make difference in prediction accuracy. See also <https://cran.r-project.org/web/packages/randomForestSRC/randomForestSRC.pdf>.
+The final bit of the tutorial shows how SRF can be custom-tuned using survsrf_train() function with a supplied list of mtry, nodesize, and nodedepth values. There are more hyperparameters in the underlying `randomForestSRC::rfsrc()` function, however, these are the ones that tend to affect prediction accuracy the most. See also <https://cran.r-project.org/web/packages/randomForestSRC/randomForestSRC.pdf>.
 
 To remind,
 
@@ -155,7 +162,7 @@ To remind,
 -   nodesize - minumum size of terminal node.
 
 ```{r tuning_srf}
-# we can custom-tune SRF :
+# creating list for the customised tuning of SRF:
 my_srf_tuning <-
   list(
     "mtry" = c(2, 3),
